Fixed header logo alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -903,8 +903,6 @@ body {
 }
 .nav--user {
   -webkit-box-flex: 0;
-  -ms-flex: 0 1 40%;
-  flex: 0 1 40%;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end;
